version/0.31/_sources/api/solver/_autosummary/settings/output_parameters_1.rst.txt
:orphan:

.. _output_parameters_1:

output_parameters
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.output_parameters_1
    :show-inheritance:

.. rubric:: Attributes

================================================   =======================================

Attribute                                                                          Summary

================================================   =======================================
:ref:`report_definitions <report_definitions_1>`               'report_definitions' child.

:ref:`named_expressions <named_expressions_1>`         Named Expression parameters object.

================================================   =======================================

.. rubric:: Methods

==================================================   ==========================================

Method                                                                                  Summary

==================================================   ==========================================
:ref:`list <list_6>`                                                List all output parameters.

:ref:`print_all_to_console <print_all_to_console>`       Print all parameters value to console.

:ref:`write_all_to_file <write_all_to_file>`                Write all parameters value to file.

==================================================   ==========================================

.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`parameters <parameters>`       'parameters' child.

==============================   =======================

